1.5/deploy_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool
  labels:
    app: multitool-back
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multitool-back
  template:
    metadata:
      labels:
        app: multitool-back
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
