1.5/deploy_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: default
spec:
  selector:
    app: nginx-front
  ports:
  - name: nginx
    port: 9001
    protocol: TCP
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
  namespace: default
spec:
  selector:
    app: multitool-back
  ports:
  - name: multitool
    port: 9002
    protocol: TCP
    targetPort: 8801
